--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -7,10 +7,25 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+
     - name: Checkout Code
       uses: actions/checkout@v2
-    - name: Build Image
+
+    - name: AWS Configure Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
+        aws-region: us-east-2
+
+    - name: AWS ECR Login
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: AWS ECR Image Build, Tag, and Push
       env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: 949672515001.dkr.ecr.us-east-2.amazonaws.com/variant64
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t server:$IMAGE_TAG server/.
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
