--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -19,11 +19,12 @@ jobs:
         aws-region: us-east-2
 
     - name: AWS ECR Login
+      id: aws-ecr-login
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: AWS ECR Image Build, Tag, and Push
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REGISTRY: ${{ steps.aws-ecr-login.outputs.registry }}
         ECR_REPOSITORY: 949672515001.dkr.ecr.us-east-2.amazonaws.com/variant64
         IMAGE_TAG: ${{ github.sha }}
       run: |
