--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -28,5 +28,5 @@ jobs:
         ECR_REPOSITORY: 949672515001.dkr.ecr.us-east-2.amazonaws.com/variant64
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG server/.
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
