--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -30,3 +30,7 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG server/.
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+    - name: AWS Download Task Definition
+    run: |
+      aws ecs describe-task-definition --task-definition variant64-backend:2 --query taskDefinition > task-definition.json
