--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -23,6 +23,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: AWS ECR Image Build, Tag, and Push
+      id: build-image
       env:
         ECR_REGISTRY: ${{ steps.aws-ecr-login.outputs.registry }}
         ECR_REPOSITORY: variant64
@@ -36,7 +37,7 @@ jobs:
         aws ecs describe-task-definition --task-definition variant64-backend:2 --query taskDefinition > task-definition.json
 
     - name: AWS ECS Add Image ID
-      id: task-def
+      id: task-definition
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
@@ -46,7 +47,7 @@ jobs:
     - name: AWS ECS Deploy
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        task-definition: ${{ steps.task-defintion.outputs.task-definition }}
         service: variant64-backend-server
         cluster: variant64
         wait-for-service-stability: true
