Add deregistering of previous revision

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -34,8 +34,10 @@ jobs:
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
     - name: AWS Download Task Definition
+      id: task-download
       run: |
-        aws ecs describe-task-definition --task-definition variant64-backend-server:1 --query taskDefinition > task-definition.json
+        aws ecs describe-task-definition --task-definition variant64-backend-server --query taskDefinition > task-definition.json
+        echo "::set-output name=revision::$(($(cat task-definition.json | jq .revision)))"
 
     - name: AWS ECS Add Image ID
       id: task-definition
@@ -49,6 +51,12 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-definition.outputs.task-definition }}
-        service: variant64-backend-server
+        service: server
         cluster: variant64
         wait-for-service-stability: true
+
+    - name: AWS ECS Deregister Previous Revision
+      if: ${{ steps.task-download.outputs.revision > 0 }}
+      run: |
+          aws ecs deregister-task-definition \
+            --task-definition  server:${{ steps.download-task.outputs.revision }}
