--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -51,5 +51,5 @@ jobs:
       with:
         task-definition: ${{ steps.task-definition.outputs.task-definition }}
         cluster: variant64
-        service: backend
+        service: backend-server
         wait-for-service-stability: true
