--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,16 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
-    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"**/*.+(ts|tsx|js|jsx)\"",
+    "lint:fix": "eslint --fix \"**/*.+(ts|tsx|js|jsx)\"",
+    "format": "prettier --write \"**/*.+(ts|tsx|js|jsx|json|css|md)\""
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +43,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   }
 }
