--- a/.github/workflows/frontend-formatting.yml
+++ b/.github/workflows/frontend-formatting.yml
@@ -21,6 +21,6 @@ jobs:
         uses: creyD/prettier_action@v4.2
         with:
           # This part is also where you can pass other options, for example:
-          prettier_options: --write client/**/*.{js,jsx,ts,tsx,json,html,css,md}
+          prettier_options: --write frontend/**/*.{js,jsx,ts,tsx,json,html,css,md}
           commit_message: '[Prettier Formatter]: format code'
           only_changed: True
