[frontend] add dev env files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "packages/*"
   ],
   "scripts": {
+    "bootstrap": "npx lerna bootstrap",
     "start": "npx lerna run start"
   },
   "devDependencies": {
