--- a/frontend/packages/web/Dockerfile
+++ b/frontend/packages/web/Dockerfile
@@ -10,6 +10,8 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 8100
+RUN npm run build
 
-CMD [ "npm", "start" ]
+EXPOSE 3000
+
+CMD [ "npx", "serve", "build" ]
