--- a/frontend/packages/web/package.json
+++ b/frontend/packages/web/package.json
@@ -55,6 +55,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "prettier": "^2.7.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "typescript": "^4.8.4"
   }
 }
